--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=gym
 
 # Database Configuration
-spring.datasource.url=jdbc:postgresql://localhost:5432/gimnasio_db
+spring.datasource.url=jdbc:postgresql://localhost:5432/gimnasio_spartan_db
 spring.datasource.username=postgres
-spring.datasource.password=TmX85col1978
+spring.datasource.password=1234
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA Configuration
